--- a/index.html
+++ b/index.html
@@ -6,56 +6,58 @@
     <title>Login Page</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
+            font-family: Arial, sans-serif;
             background-color: #f0f0f0;
         }
         .login-container {
-            width: 300px;
-            padding: 20px;
             background-color: #fff;
+            padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            width: 300px;
             text-align: center;
         }
-        .login-container h1 {
-            margin-bottom: 24px;
-            font-size: 24px;
-            color: #333;
+        h2 {
+            margin-bottom: 20px;
         }
-        .login-container input[type="text"],
-        .login-container input[type="password"] {
+        input[type="text"], input[type="password"] {
             width: 100%;
             padding: 10px;
             margin: 8px 0;
-            border: 1px solid #ddd;
+            border: 1px solid #ccc;
             border-radius: 4px;
         }
-        .login-container button {
+        .error {
+            color: red;
+            margin-bottom: 10px;
+        }
+        button {
             width: 100%;
             padding: 10px;
-            background-color: #4CAF50;
+            color: #fff;
+            background-color: #007bff;
             border: none;
             border-radius: 4px;
-            color: white;
-            font-size: 16px;
             cursor: pointer;
         }
-        .login-container button:hover {
-            background-color: #45a049;
+        button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
     <div class="login-container">
-        <h1>Login</h1>
-        <form action="{{ url_for('login') }}" method="POST">
-            <input type="text" name="username" placeholder="Username" required><br>
-            <input type="password" name="password" placeholder="Password" required><br>
+        <h2>Login</h2>
+        {% if error %}
+        <p class="error">{{ error }}</p>
+        {% endif %}
+        <form action="{{ url_for('login') }}" method="post">
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
     </div>
